--- a/Aula 01/index.html
+++ b/Aula 01/index.html
@@ -65,6 +65,45 @@
                 <p>Criei um aplicativo de gerenciamento de tarefas estilo khanban usando Java e JavaFX. O aplicativo permite aos usuários adicionar, editar e excluir tarefas, além de marcar tarefas como concluídas.</p>
             </article>
 
+        </section id="habilidades">
+
+        <h2>Habilidades e tecnologias</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Tecnologia</th>
+                    <th>Nível</th>
+                    <th>Descrição</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Java</td>
+                    <td>Spring Boot</td>
+                    <td>MySQL</td>
+                </tr>
+
+                <tr>
+                    <td>Intermediário</td>
+                    <td>Intermediário</td>
+                    <td>Intermediário</td>
+                </tr>
+
+                <tr>
+                    <td>Linguagem de programação orientada à objetos. Conhecimento em POO, padrões de projetos, testes unitários, colection framework.</td>
+                    <td>Experiência com construções de aplicações web com o backend em Spring Boot</td>
+                    <td>Capacidade de modelagem e integração com banco de dados relacionais e back end.</td>
+                </tr>
+
+            </tbody>
+        </table>
+
+        <section>
+
+
+
         </section>
 
         <footer id="contato">
@@ -74,10 +113,54 @@
             <h2>Contato</h2>
 
             <p>Tem um projeto em mente? Entre em contato:</p>
-            
-            <address>
-                <p>Email: <a href="mailto:lucasgodoyjor@gmail.com">lucasgodoyjor@gmail.com</a></p>
-            </address>
+
+            <form action="">
+                <label for="nome">Nome: </label>
+                <input type="text" id="nome" name="nome" required>
+
+                <br/>
+                <br/>
+
+                <label for="email">Email: </label>
+                <input type="email" id="email" name="email" required>
+
+                <br/>
+                <br/>
+
+                <label for="telefone">Telefone: </label>
+                <input type="tel" id="telefone" name="telefone">
+
+                <br/>
+                <br/>
+
+                <label for="assunto">Assunto: </label>
+                <select id="assunto" name="assunto" required>
+                    <option value="" disabled selected>Selecione uma opção</option>
+                    <option value="orcamento">Orçamento</option>
+                    <option value="sugestao">Sugestão</option>
+                    <option value="elogio">Elogio</option>
+                    <option value="duvida">Dúvida</option>
+                    <option value="outro">Outro</option>
+                </select>
+
+                <br/>
+                <br/>
+
+                <label for="mensagem" required>Mensagem: </label>
+                <textarea id="mensagem" cols="30" rows="10" name="mensagem" required></textarea>
+
+                <br/>
+                <br/>
+
+                <label for="inscricao">Deseja receber a newsletter?</label>
+                <input type="checkbox" id="inscricao" name="inscricao" required>
+                
+
+                <br/>
+                <br/>
+
+                <button type="submit">Enviar</button>
+            </form>
 
         </footer>
 
