--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Índice de aulas: SC Tech: Intro ao front end</h1>
     <nav>
-        <li><a href="/Aula 01/index.html">Aula 1</a></li>
-        <li>Item 2</li>
+        <li><a href="/Aula 01/index.html">Aula 1 - Primeiros passos / Portfólio</a></li>
+        <li><a href="/Aula 06/index.html">Aula 6 - Formulário</a></li>
         <li>Item 3</li>
     </nav>
 </body>
