--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <li><a href="/Aula 01/index.html">Aula 1 - Primeiros passos / Portfólio</a></li>
         <li><a href="/Aula 06/index.html">Aula 6 - Formulário</a></li>
-        <li>Item 3</li>
+        <li><a href="/Aula 08/index.html">Aula 8 - Estilização CSS</a></li>        
     </nav>
 </body>
 </html>
