Adicionada aula 10 seletores css

--- a/Aula 08/index.html
+++ b/Aula 08/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="style.css">
     <style>
         p:nth-of-type(2) {
-            color: blue;
+            color: blueviolet;
         }
     </style>
 </head>
 <body>
-    <p style="color:red;">Texto parágrafo com estilo inline</p>
+    <p style="color: orangered;">Texto parágrafo com estilo inline</p>
     <p>Texto parágrafo 2 com estilo no head do html</p>
     <p>Texto parágrafo 2 com estilo em css arquivo separado</p>
+    <p id="titulo">Texto de parágrafo com id título</p>
+    <p id="titulo" class="destaque">Texto de parágrafo com id título e class destaque</p>
+    <a href="#">Teste link</a>
 </body>
 </html>
