--- a/Aula 08/index.html
+++ b/Aula 08/index.html
@@ -17,6 +17,16 @@
     <p>Texto parágrafo 2 com estilo em css arquivo separado</p>
     <p id="titulo">Texto de parágrafo com id título</p>
     <p id="titulo" class="destaque">Texto de parágrafo com id título e class destaque</p>
-    <a href="#">Teste link</a>
+    <a href="#">Teste link que vem logo após um p</a><br><br>
+    <a href="#">Teste link que vem logo após link</a>
+    <p>
+        <a href="#">Teste link que vem dentro de um parágrafo</a>        
+    </p>
+    <div>
+        <p>
+        
+            <a href="#">Teste link que vem dentro de um parágrafo que está dentro de uma div</a>        
+        </p>
+    </div>
 </body>
 </html>
