Adicionando aula 12 de grid layout

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <h1>Índice de aulas: SC Tech: Intro ao front end</h1>
     <nav>
-        <li><a href="/Aula 01/index.html">Aula 1 - Primeiros passos / Portfólio</a></li>
-        <li><a href="/Aula 06/index.html">Aula 6 - Formulário</a></li>
-        <li><a href="/Aula 08/index.html">Aula 8 - Estilização CSS</a></li>
-        <li><a href="Aula 11/index.html">Aula 11 - Estilização CSS</a></li>
+        <li><a href="Aula 01 - introdução/index.html">Aula 1 - Primeiros passos / Portfólio</a></li>
+        <li><a href="/Aula 06 - boas práticas/index.html">Aula 6 - Formulário</a></li>
+        <li><a href="/Aula 08 - css/index.html">Aula 8 - Estilização CSS</a></li>
+        <li><a href="Aula 11 - grid model/index.html">Aula 11 - Grid Model</a></li>
+        <li><a href="Aula 12 - css grid layout/index.html">Aula 12 - CSS Grid Layout</a></li>
     </nav>
 </body>
 </html>
