--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <li><a href="/Aula 08 - css/index.html">Aula 8 - Estilização CSS</a></li>
         <li><a href="Aula 11 - grid model/index.html">Aula 11 - Grid Model</a></li>
         <li><a href="Aula 12e13 - css grid layout/index.html">Aula 12 - CSS Grid Layout</a></li>
+        <li><a href="Aula 14e15 - flexbox e responsividade/index.html">Aula 15 - Flexbox e responsividade</a><li>
     </nav>
 </body>
 </html>
