Adicionada aula 16 estilização na prática - portfolio responsivo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="Aula 11 - grid model/index.html">Aula 11 - Grid Model</a></li>
         <li><a href="Aula 12e13 - css grid layout/index.html">Aula 12 - CSS Grid Layout</a></li>
         <li><a href="Aula 14e15 - flexbox e responsividade/index.html">Aula 15 - Flexbox e responsividade</a><li>
+        <li><a href="Aula 16 - Estilização na prática/index.html">Aula 16 - Estilização na prática - Portfolio</a>
     </nav>
 </body>
 </html>
