Adicionadas as aulas 17 e 18 sobre javascript, sintaxe, estrutura de controle e manipulação da DOM

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <li><a href="/Aula 08 - css/index.html">Aula 8 - Estilização CSS</a></li>
         <li><a href="Aula 11 - grid model/index.html">Aula 11 - Grid Model</a></li>
         <li><a href="Aula 12e13 - css grid layout/index.html">Aula 12 - CSS Grid Layout</a></li>
-        <li><a href="Aula 14e15 - flexbox e responsividade/index.html">Aula 15 - Flexbox e responsividade</a><li>
-        <li><a href="Aula 16 - Estilização na prática/index.html">Aula 16 - Estilização na prática - Portfolio</a>
+        <li><a href="Aula 14e15 - flexbox e responsividade/index.html">Aula 15 - Flexbox e responsividade</a></li>
+        <li><a href="Aula 16 - Estilização na prática/index.html">Aula 16 - Estilização na prática - Portfolio</a></li>
+        <li><a href="Aula 17e18 - Javascript/index.html">Aula 17 e 18 - Javascript</a></li>
     </nav>
 </body>
 </html>
