Adicionada aula 19 de javascript e dom

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li><a href="Aula 14e15 - flexbox e responsividade/index.html">Aula 15 - Flexbox e responsividade</a></li>
         <li><a href="Aula 16 - Estilização na prática/index.html">Aula 16 - Estilização na prática - Portfolio</a></li>
         <li><a href="Aula 17e18 - Javascript/index.html">Aula 17 e 18 - Javascript</a></li>
+        <li><a href="Aula 19 - Javascript/index.html">Aula 19 - Javascript: Manipulação do DOM e Eventos</a></li>
+        <li><a href="Aula 19 - Javascript/calculadorabasica.html">Aula 19 - Calculadora básica</a></li>
+        <li><a href="Aula 19 - Javascript/idiomas.html">Aula 19 - Saudações em diferentes idiomas</a></li>
     </nav>
 </body>
 </html>
