--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <li><a href="Aula 19 - Javascript/index.html">Aula 19 - Javascript: Manipulação do DOM e Eventos</a></li>
         <li><a href="Aula 19 - Javascript/calculadorabasica.html">Aula 19 - Calculadora básica</a></li>
         <li><a href="Aula 19 - Javascript/idiomas.html">Aula 19 - Saudações em diferentes idiomas</a></li>
+        <li><a href="Aula 20e21 - Arrays/index.html">Aula 20 - Arrays</a></li>
+        <li><a href="Aula 22 e 23 - Estruturas de repetição/index.html">Aula 22 e 23 - Estruturas de repetição</a></li>
     </nav>
 </body>
 </html>
