--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li><a href="Aula 19 - Javascript/idiomas.html">Aula 19 - Saudações em diferentes idiomas</a></li>
         <li><a href="Aula 20e21 - Arrays/index.html">Aula 20 - Arrays</a></li>
         <li><a href="Aula 22 e 23 - Estruturas de repetição/index.html">Aula 22 e 23 - Estruturas de repetição</a></li>
+        <li><a href="Aula 24 e 25 - Funções e Eventos/index.html">Aula 24 e 25 - Funções</a></li>
+        <li><a href="Aula 24 e 25 - Funções e Eventos/index02.html">Aula 24 e 25 - Funções e Eventos parte 2</a><li>
     </nav>
 </body>
 </html>
