--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <li><a href="Aula 20e21 - Arrays/index.html">Aula 20 - Arrays</a></li>
         <li><a href="Aula 22 e 23 - Estruturas de repetição/index.html">Aula 22 e 23 - Estruturas de repetição</a></li>
         <li><a href="Aula 24 e 25 - Funções e Eventos/index.html">Aula 24 e 25 - Funções</a></li>
-        <li><a href="Aula 24 e 25 - Funções e Eventos/index02.html">Aula 24 e 25 - Funções e Eventos parte 2</a><li>
+        <li><a href="Aula 24 e 25 - Funções e Eventos/index02.html">Aula 24 e 25 - Funções e Eventos parte 2</a></li>
+        <li><a href="Aula 24 e 25 - Funções e Eventos/pedidospizzaria.html">Aula 24 e 25 - Pizzaria Javascript</a></li>
+        <li><a href="Aula 27 e 28 - DOM e Jogo da Velha/jogodavelha.css">Aula 27 - Jogo da Velha</a></li>
+        <li><a href="Aula 27 e 28 - DOM e Jogo da Velha/todolist.html">Aula 27 e 28 - Todolist</a></li>
     </nav>
 </body>
 </html>
