Adicionado aula 28 - validação de formulários com javascript e expressões regulares

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <li><a href="Aula 24 e 25 - Funções e Eventos/index.html">Aula 24 e 25 - Funções</a></li>
         <li><a href="Aula 24 e 25 - Funções e Eventos/index02.html">Aula 24 e 25 - Funções e Eventos parte 2</a></li>
         <li><a href="Aula 24 e 25 - Funções e Eventos/pedidospizzaria.html">Aula 24 e 25 - Pizzaria Javascript</a></li>
-        <li><a href="Aula 27 e 28 - DOM e Jogo da Velha/jogodavelha.css">Aula 27 - Jogo da Velha</a></li>
-        <li><a href="Aula 27 e 28 - DOM e Jogo da Velha/todolist.html">Aula 27 e 28 - Todolist</a></li>
+        <li><a href="Aula 27 - DOM e Jogo da Velha/jogodavelha.html">Aula 27 - Jogo da Velha</a></li>
+        <li><a href="Aula 27 - DOM e Jogo da Velha/todolist.html">Aula 27 - Todolist</a></li>
+        <li><a href="Aula 28 - Validação de formulário/index.html">Aula 28 - Validação de formulário</a></li>
     </nav>
 </body>
 </html>
